--- a/vistas/aviso-legal.html
+++ b/vistas/aviso-legal.html
@@ -6,7 +6,7 @@
     <meta name="robots" content="noindex, follow">
     <link rel="canonical" href="https://bluedebug.com">
     <title>Aviso Legal | BlueDeBug</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../estilos/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
@@ -14,8 +14,8 @@
 <body>
     <nav class="navbar" id="navbar">
         <div class="nav-container">
-            <a href="index.html" class="logo-container">
-                <img src="logo.svg" alt="BlueDeBug Logo" class="logo">
+            <a href="../index.html" class="logo-container">
+                <img src="../assets/logo.svg" alt="BlueDeBug Logo" class="logo">
                 <span class="logo-text">BlueDeBug</span>
             </a>
         </div>
