--- a/vistas/diseno-uiux.html
+++ b/vistas/diseno-uiux.html
@@ -13,8 +13,8 @@
     <meta name="robots" content="index, follow">
     <link rel="canonical" href="https://bluedebug.com/diseno-uiux.html">
     <title>Diseño UI/UX Profesional | Agencia de Diseño de Interfaces | BlueDeBug</title>
-    <link rel="icon" type="image/svg+xml" href="logo.svg">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/svg+xml" href="../assets/logo.svg">
+    <link rel="stylesheet" href="../estilos/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
@@ -23,8 +23,8 @@
     <!-- Navigation -->
     <nav class="navbar" id="navbar">
         <div class="nav-container">
-            <a href="index.html" class="logo-container">
-                <img src="logo.svg" alt="BlueDeBug Logo" class="logo">
+            <a href="../index.html" class="logo-container">
+                <img src="../assets/logo.svg" alt="BlueDeBug Logo" class="logo">
                 <span class="logo-text">BlueDeBug</span>
             </a>
             <div class="menu-toggle" id="menuToggle">
@@ -33,11 +33,11 @@
                 <span></span>
             </div>
             <ul class="nav-menu" id="navMenu">
-                <li><a href="index.html#inicio" class="nav-link">Inicio</a></li>
-                <li><a href="index.html#servicios" class="nav-link">Servicios</a></li>
-                <li><a href="index.html#portafolio" class="nav-link">Portafolio</a></li>
-                <li><a href="index.html#nosotros" class="nav-link">Nosotros</a></li>
-                <li><a href="index.html#contacto" class="nav-link btn-contact">Contacto</a></li>
+                <li><a href="../index.html#inicio" class="nav-link">Inicio</a></li>
+                <li><a href="../index.html#servicios" class="nav-link">Servicios</a></li>
+                <li><a href="../index.html#portafolio" class="nav-link">Portafolio</a></li>
+                <li><a href="../index.html#nosotros" class="nav-link">Nosotros</a></li>
+                <li><a href="../index.html#contacto" class="nav-link btn-contact">Contacto</a></li>
             </ul>
         </div>
     </nav>
@@ -51,7 +51,7 @@
                     Creamos interfaces intuitivas y experiencias digitales excepcionales que los usuarios adoran. 
                     Diseño centrado en el usuario con prototipado, testing y resultados medibles.
                 </p>
-                <a href="index.html#contacto" class="btn btn-primary">
+                <a href="../index.html#contacto" class="btn btn-primary">
                     Solicitar presupuesto
                     <svg width="16" height="16" viewBox="0 0 16 16" fill="none">
                         <path d="M6 12L10 8L6 4" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
@@ -252,7 +252,7 @@
                 <div class="service-cta" data-aos="fade-up">
                     <h2>¿Listo para mejorar tu experiencia de usuario?</h2>
                     <p>Solicita una auditoría UX gratuita o cuéntanos sobre tu proyecto.</p>
-                    <a href="index.html#contacto" class="btn btn-primary">Contactar ahora</a>
+                    <a href="../index.html#contacto" class="btn btn-primary">Contactar ahora</a>
                 </div>
             </div>
         </div>
@@ -264,7 +264,7 @@
             <div class="footer-content">
                 <div class="footer-brand">
                     <div class="logo-container">
-                        <img src="logo.svg" alt="BlueDeBug Logo" class="logo">
+                        <img src="../assets/logo.svg" alt="BlueDeBug Logo" class="logo">
                         <span class="logo-text">BlueDeBug</span>
                     </div>
                     <p class="footer-description">
@@ -286,9 +286,9 @@
                     <div class="footer-column">
                         <h4>Empresa</h4>
                         <ul>
-                            <li><a href="index.html#nosotros">Sobre Nosotros</a></li>
-                            <li><a href="index.html#portafolio">Portafolio</a></li>
-                            <li><a href="index.html#contacto">Contacto</a></li>
+                            <li><a href="../index.html#nosotros">Sobre Nosotros</a></li>
+                            <li><a href="../index.html#portafolio">Portafolio</a></li>
+                            <li><a href="../index.html#contacto">Contacto</a></li>
                         </ul>
                     </div>
 
