--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                         <p class="portfolio-category">Aplicación de Gestión Deportiva • Plataforma Web Privada</p>
                         <p class="portfolio-description">
                             Sistema de gestión deportiva para la Federación de Voleibol del Principado de Asturias (FVBPA). 
-                            Automatiza la designación de árbitros a partidos, gestiona la disponibilidad de los árbitrafos 
+                            Automatiza la designación de árbitros a partidos, gestiona la disponibilidad de los árbitros 
                             y envía notificaciones automáticas, optimizando la administración de competiciones.
                         </p>
                         <div class="portfolio-tags">
