--- a/vistas/apps-moviles.html
+++ b/vistas/apps-moviles.html
@@ -208,6 +208,15 @@
                                 <span>Modo Offline</span>
                             </div>
                         </div>
+                        <a href="vbstats.html" class="portfolio-mini-card" style="text-decoration: none; color: inherit;">
+                            <h3>VBStats</h3>
+                            <p>App para entrenadores de voleibol. Estadísticas en tiempo real, gráficas de rendimiento y seguimiento del progreso de equipos.</p>
+                            <div class="portfolio-tags">
+                                <span>iOS</span>
+                                <span>Android</span>
+                                <span>Estadísticas</span>
+                            </div>
+                        </a>
                     </div>
                 </div>
 
