--- a/vistas/vbstats-privacidad.html
+++ b/vistas/vbstats-privacidad.html
@@ -86,7 +86,7 @@
     <main class="legal-section">
         <div class="container">
             <h2>1. INTRODUCCIÓN</h2>
-            <p>VBStats es una aplicación para registrar y consultar estadísticas de voleibol. Esta Política de Privacidad explica qué datos recopilamos, por qué los usamos, con quién los compartimos, cómo los protegemos y qué derechos tienes sobre ellos.</p>
+            <p>VBStats es una aplicación para registrar y analizar estadísticas de voleibol. Permite gestionar equipos, capturar acciones durante partidos (recepción, ataque, bloqueo, saque, defensa, colocación), consultar métricas detalladas y realizar seguimiento del progreso. Esta Política de Privacidad explica qué datos recopilamos, por qué los usamos, con quién los compartimos, cómo los protegemos y qué derechos tienes sobre ellos.</p>
 
             <h2>2. RESPONSABLE Y CONTACTO</h2>
             <ul>
