--- a/vistas/vbstats-terminos.html
+++ b/vistas/vbstats-terminos.html
@@ -135,14 +135,16 @@
             <p>Este Acuerdo de Licencia de Usuario Final (EULA) es un acuerdo legal entre tú y Adrián Estrada González / BlueDeBug ("nosotros", "nos" o "nuestro").</p>
 
             <h2>2. DESCRIPCIÓN DEL SERVICIO</h2>
-            <p>VBStats es una aplicación móvil diseñada para entrenadores de voleibol que permite:</p>
+            <p>VBStats es una aplicación móvil diseñada para registrar y analizar estadísticas de voleibol que permite:</p>
             <ul>
-                <li>Registrar estadísticas de partidos de voleibol en tiempo real</li>
-                <li>Gestionar equipos y jugadores</li>
-                <li>Generar gráficas de rendimiento y análisis</li>
-                <li>Realizar seguimiento del progreso de los jugadores</li>
-                <li>Compartir informes con jugadores y staff técnico</li>
-                <li>Personalizar categorías de estadísticas según metodología de entrenamiento</li>
+                <li>Gestión de equipos: crear equipos y añadir jugadores con nombre, dorsal y posición</li>
+                <li>Registro de partidos: iniciar partidos, configurar sets, seleccionar titulares y registrar estadísticas en tiempo real</li>
+                <li>Captura de acciones: recepción, ataque, bloqueo, saque, defensa y colocación con diferentes valoraciones</li>
+                <li>Configuración personalizada de estadísticas según las necesidades del usuario</li>
+                <li>Consulta y filtrado de estadísticas por partido, set o jugador</li>
+                <li>Exportación de estadísticas a Excel y compartir en redes sociales</li>
+                <li>Seguimiento del progreso del equipo con gráficos de tendencias</li>
+                <li>Marcador básico para seguir resultados sin recoger estadísticas</li>
             </ul>
 
             <h2>3. SUSCRIPCIONES AUTO-RENOVABLES</h2>
@@ -152,7 +154,7 @@
                 <h3>Planes de Suscripción</h3>
                 
                 <div class="subscription-item">
-                    <div class="subscription-name">Plan Gratuito</div>
+                    <div class="subscription-name">Plan Gratis</div>
                     <div class="subscription-details">
                         <div class="subscription-price">0,00€</div>
                         <div class="subscription-duration">Sin suscripción</div>
@@ -160,7 +162,7 @@
                 </div>
 
                 <div class="subscription-item">
-                    <div class="subscription-name">Suscripción Básica</div>
+                    <div class="subscription-name">Suscripción Básico</div>
                     <div class="subscription-details">
                         <div class="subscription-price">4,99€/mes</div>
                         <div class="subscription-duration">Renovación mensual automática</div>
@@ -178,8 +180,9 @@
 
             <h3>3.1 Información de las Suscripciones</h3>
             <ul>
-                <li><strong>Suscripción Básica (4,99€/mes):</strong> Incluye hasta 3 equipos, estadísticas completas, historial ilimitado, gráficas de rendimiento y exportación de informes en PDF. Duración: 1 mes con renovación automática.</li>
-                <li><strong>Suscripción PRO (9,99€/mes):</strong> Incluye equipos ilimitados, todas las estadísticas y gráficas avanzadas, exportación en múltiples formatos y sincronización cloud. Duración: 1 mes con renovación automática.</li>
+                <li><strong>Plan Gratis (0€):</strong> Perfecto para espectadores. Busca partidos por código compartido y usa el marcador básico para seguir el resultado. Sin suscripción requerida.</li>
+                <li><strong>Suscripción Básico (4,99€/mes):</strong> Incluye creación de hasta 2 equipos con jugadores ilimitados, partidos guardados ilimitados, configuración de estadísticas básica (recepción, ataque, bloqueo, saque), ver estadísticas de partido con filtros por set y jugador. Duración: 1 mes con renovación automática.</li>
+                <li><strong>Suscripción PRO (9,99€/mes):</strong> Incluye equipos ilimitados, todas las estadísticas avanzadas (incluyendo defensa y colocación), exportación a Excel, seguimiento del equipo con gráficos de tendencias y análisis completo de rendimiento. Duración: 1 mes con renovación automática.</li>
             </ul>
 
             <h3>3.2 Pago y Renovación</h3>
