--- a/index.html
+++ b/index.html
@@ -258,15 +258,14 @@
 
                 <a class="portfolio-card" data-aos="fade-up" data-aos-delay="400" href="vistas/vbstats.html">
                     <div class="portfolio-image">
-                        <img src="assets/capts_vbstats/Simulator Screenshot - iPhone 11 Pro Max - 2026-02-03 at 10.15.33.png" alt="VBStats App">
+                        <img src="assets/logo_VBStats.png" alt="VBStats App">
                     </div>
                     <div class="portfolio-content">
                         <h3>VBStats</h3>
                         <p class="portfolio-category">Aplicación Móvil • iOS & Android</p>
                         <p class="portfolio-description">
-                            App para entrenadores de voleibol que permite registrar estadísticas de partidos en tiempo real, 
-                            generar gráficas de rendimiento, realizar seguimiento del progreso de los equipos y 
-                            compartir informes profesionales con los jugadores.
+                            App para registrar y analizar estadísticas de voleibol. Gestiona equipos, captura acciones en tiempo real 
+                            durante partidos (recepción, ataque, bloqueo, saque, defensa, colocación) y realiza seguimiento del progreso.
                         </p>
                         <div class="portfolio-tags">
                             <span>iOS</span>
