--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
             </div>
             
             <div class="portfolio-grid">
-                <a class="portfolio-card" data-aos="fade-up" data-aos-delay="100" href="https://play.google.com/store/apps/details?id=com.dreamleague" target="_blank" rel="noopener">
+                <a class="portfolio-card" data-aos="fade-up" data-aos-delay="100" href="vistas/dreamleague.html">
                     <div class="portfolio-image">
                         <img src="assets/dreamleague-logo.png" alt="DreamLeague App">
                     </div>
@@ -214,7 +214,7 @@
                     </div>
                 </a>
 
-                <a class="portfolio-card" data-aos="fade-up" data-aos-delay="200" href="https://play.google.com/store/apps/details?id=com.alignme" target="_blank" rel="noopener">
+                <a class="portfolio-card" data-aos="fade-up" data-aos-delay="200" href="vistas/alignme.html">
                     <div class="portfolio-image">
                         <img src="assets/alignme-logo.png" alt="AlignMe App">
                     </div>
@@ -222,15 +222,15 @@
                         <h3>AlignMe</h3>
                         <p class="portfolio-category">Aplicación Móvil • iOS & Android</p>
                         <p class="portfolio-description">
-                            Sistema profesional de arbitraje para voleibol adoptado por la Federación Asturiana y Balear. 
-                            Herramienta que digitaliza y optimiza el trabajo de árbitros durante los partidos oficiales, 
-                            mejorando la precisión y eficiencia del arbitraje.
+                            App para árbitros de voleibol adoptada por la Federación Asturiana y Balear. 
+                            Permite crear rotaciones de partidos y compartirlas mediante código QR 
+                            de forma rápida y sencilla.
                         </p>
                         <div class="portfolio-tags">
                             <span>React Native</span>
-                            <span>Firebase</span>
+                            <span>QR Code</span>
                             <span>UI/UX Design</span>
-                            <span>Tiempo Real</span>
+                            <span>Rotaciones</span>
                         </div>
                     </div>
                 </a>
@@ -442,6 +442,15 @@
                     </div>
 
                     <div class="footer-column">
+                        <h4>Apps</h4>
+                        <ul>
+                            <li><a href="vistas/vbstats.html">VBStats</a></li>
+                            <li><a href="vistas/alignme.html">AlignMe</a></li>
+                            <li><a href="vistas/dreamleague.html">DreamLeague</a></li>
+                        </ul>
+                    </div>
+
+                    <div class="footer-column">
                         <h4>Empresa</h4>
                         <ul>
                             <li><a href="#nosotros">Sobre Nosotros</a></li>
@@ -462,7 +471,7 @@
             </div>
 
             <div class="footer-bottom">
-                <p>&copy; 2025 BlueDeBug. Todos los derechos reservados.</p>
+                <p>&copy; 2026 BlueDeBug. Todos los derechos reservados.</p>
             </div>
         </div>
     </footer>
