--- a/vistas/vbstats.html
+++ b/vistas/vbstats.html
@@ -624,15 +624,7 @@
                         <div class="screenshot-item">
                             <img src="../assets/capts_vbstats/Simulator Screenshot - iPhone 11 Pro Max - 2026-02-03 at 10.19.28.png" alt="VBStats Screenshot 13">
                         </div>
-                        <div class="screenshot-item">
-                            <img src="../assets/capts_vbstats/Simulator Screenshot - iPhone 11 Pro Max - 2026-02-03 at 10.19.35.png" alt="VBStats Screenshot 14">
-                        </div>
-                        <div class="screenshot-item">
-                            <img src="../assets/capts_vbstats/Simulator Screenshot - iPhone 11 Pro Max - 2026-02-03 at 10.19.42.png" alt="VBStats Screenshot 15">
-                        </div>
-                        <div class="screenshot-item">
-                            <img src="../assets/capts_vbstats/Simulator Screenshot - iPhone 11 Pro Max - 2026-02-03 at 11.10.56.png" alt="VBStats Screenshot 16">
-                        </div>
+                        <!-- Se eliminaron 3 capturas que producían 'undefined' en la web -->
                     </div>
                     <div class="carousel-controls">
                         <button class="carousel-btn" id="prevBtn" aria-label="Anterior">
